# training-tracker

./: .gitignore  .pre-commit-config.yaml  manage.py  pyproject.toml
training/: admin.py  models.py
training/migrations/: 0001_initial.py  0002_trainingrequirement.py  0003_trainingcompletion_trainingassignment.py
training_tracker/: asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  managers.py  models.py  tests.py
users/migrations/: 0001_initial.py
