[tool.poetry]
name = "training-tracker"
version = "0.1.0"
description = ""
authors = ["Jason Washburn <jason.washburn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"

[tool.poetry.group.dev.dependencies]
djlint = "^1.32.1"
black = "^23.9.1"
isort = "^5.12.0"
ruff = "^0.0.290"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.per-file-ignores]
"settings.py" = ["E501"]
"**/migrations/*.py" = ["ALL"]
